--- a/Lesson 20/navbar-display-inline-block.html
+++ b/Lesson 20/navbar-display-inline-block.html
@@ -6,7 +6,7 @@
     <title>Navbar - inline-block</title>
     
     <link
-        href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Gabarito:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="navbarinline-block.css">
 </head>
