--- a/prod/appico-features/plans&pricing.html
+++ b/prod/appico-features/plans&pricing.html
@@ -42,18 +42,18 @@
                 </ul>
                 <ul class="business">
                     <li class="basicb">
-                        <h3>BUSINESS</h3>
-                        <h4>$99 <span>/ Month</span></h4>
-                        <p>Appico Pricing Table Design.</p>
+                        <h3 class="white">BUSINESS</h3>
+                        <h4 class="white">$99 <span>/ Month</span></h4>
+                        <p class="white">Appico Pricing Table Design.</p>
                     </li>
-                    <ul class="userb">
-                        <li>1 User</li>
-                        <li>1 Dashboard</li>
-                        <li>5 Projects</li>
-                        <li>Custom Domain</li>
+                    <ul >
+                        <li class="white">1 User</li>
+                        <li class="white">1 Dashboard</li>
+                        <li class="white">5 Projects</li>
+                        <li class="white">Custom Domain</li>
                 
                     </ul>
-                    <button>PURCHASE</button>
+                    <button class="bwhite">PURCHASE</button>
                 </ul>
                     <ul>
                         <li class="basic">
