--- a/prod/appico-features/features.html
+++ b/prod/appico-features/features.html
@@ -25,40 +25,70 @@
         </header>
 
         <div class="row">
-            <ul>
-                <li>
+            <ul class="row-left">
+                <li >
                     <h3>Responsive Design</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo eos accusamus, quaerat eius id illum cum error temporibus earum adipisci, unde recusandae natus voluptatum quis.</p>
+                    <p class="left">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo eos accusamus, quaerat eius id illum cum error temporibus </p>
                     
-                    <div class="icon">
+                    <div class="icon-right">
                         <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#777">
-                        <path
+                            <path
                             d="M80-160v-120h80v-440q0-33 23.5-56.5T240-800h600v80H240v440h240v120H80Zm520 0q-17 0-28.5-11.5T560-200v-400q0-17 11.5-28.5T600-640h240q17 0 28.5 11.5T880-600v400q0 17-11.5 28.5T840-160H600Zm40-120h160v-280H640v280Zm0 0h160-160Z" />
-                    </svg>
+                        </svg>
                     </div>
                 </li>
-                <li>
+                <li >
                     <h3>Bootstrap 4</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo eum architecto minima odio iusto vel, quisquam doloremque ut possimus! Voluptatum sapiente nisi unde eum a?</p>
+                    <p class="left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, aperiam sed tempore quam esse dicta tenetur beatae </p>
+                    <div class="icon-right">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#777">
+                            <path
+                                d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm0-80h420v-140H160v140Zm500 0h140v-360H660v360ZM160-460h420v-140H160v140Z" />
+                        </svg>
+                    </div>
                 </li>
-                <li>
+                <li >
                     <h3>Cross Browser Support</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas possimus ratione laborum, tempora sapiente illo et, voluptate fuga reiciendis autem asperiores pariatur ad alias eligendi.</p>
+                    <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur natus dolores consequuntur autem ab id rerum incidunt</p>
+                    <div class="icon-right">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#777">
+                            <path
+                                d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q83 0 155.5 31.5t127 86q54.5 54.5 86 127T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Zm0-82q26-36 45-75t31-83H404q12 44 31 83t45 75Zm-104-16q-18-33-31.5-68.5T322-320H204q29 50 72.5 87t99.5 55Zm208 0q56-18 99.5-55t72.5-87H638q-9 38-22.5 73.5T584-178ZM170-400h136q-3-20-4.5-39.5T300-480q0-21 1.5-40.5T306-560H170q-5 20-7.5 39.5T160-480q0 21 2.5 40.5T170-400Zm216 0h188q3-20 4.5-39.5T580-480q0-21-1.5-40.5T574-560H386q-3 20-4.5 39.5T380-480q0 21 1.5 40.5T386-400Zm268 0h136q5-20 7.5-39.5T800-480q0-21-2.5-40.5T790-560H654q3 20 4.5 39.5T660-480q0 21-1.5 40.5T654-400Zm-16-240h118q-29-50-72.5-87T584-782q18 33 31.5 68.5T638-640Zm-234 0h152q-12-44-31-83t-45-75q-26 36-45 75t-31 83Zm-200 0h118q9-38 22.5-73.5T376-782q-56 18-99.5 55T204-640Z" />
+                        </svg>
+                    </div>
                 </li>
             </ul>
             <img src="feature-moc.png" alt="features mockup">
-            <ul>
-                <li>
+            <ul class="row-right">
+                <li >
                     <h3>Simple frendly interface</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ea vel tenetur reiciendis! Tenetur esse id aperiam ipsum vero adipisci provident consequatur at suscipit dolorem?</p>
+                    <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ipsum cupiditate vero nemo enim vel nobis eum est.</p>
+                    <div class="icon-left">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#777">
+                            <path
+                                d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
+                        </svg>
+                    </div>
                 </li>
-                <li>
+                <li >
                     <h3>Personalized user support</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur explicabo ex autem, maiores sit omnis error excepturi corrupti corporis ipsum numquam tempore eius repudiandae quod!</p>
+                    <p class="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum magni minus adipisci sunt temporibus, quas optio dolore dicta.</p>
+                    <div class="icon-left">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#777">
+                            <path
+                                d="M620-520q25 0 42.5-17.5T680-580q0-25-17.5-42.5T620-640q-25 0-42.5 17.5T560-580q0 25 17.5 42.5T620-520Zm-280 0q25 0 42.5-17.5T400-580q0-25-17.5-42.5T340-640q-25 0-42.5 17.5T280-580q0 25 17.5 42.5T340-520Zm140 260q68 0 123.5-38.5T684-400H276q25 63 80.5 101.5T480-260Zm0 180q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-400Zm0 320q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Z" />
+                        </svg>
+                    </div>
                 </li>
-                <li>
+                <li >
                     <h3>Great community</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere asperiores, dolores cupiditate atque perspiciatis reiciendis magnam eius aspernatur officiis quaerat laudantium dolorum, dolor inventore doloremque.</p>
+                    <p class="right">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore unde minima architecto veritatis optio vero quis dolorum</p>
+                    <div class="icon-left">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#777">
+                            <path
+                                d="M880-80 720-240H320q-33 0-56.5-23.5T240-320v-40h440q33 0 56.5-23.5T760-440v-280h40q33 0 56.5 23.5T880-640v560ZM160-473l47-47h393v-280H160v327ZM80-280v-520q0-33 23.5-56.5T160-880h440q33 0 56.5 23.5T680-800v280q0 33-23.5 56.5T600-440H240L80-280Zm80-240v-280 280Z" />
+                        </svg>
+                    </div>
                 </li>
             </ul>
         </div>
