--- a/Lesson 20/V1/dose.html
+++ b/Lesson 20/V1/dose.html
@@ -17,27 +17,42 @@
 <body>
 
     <section>
-        <header>
-            <h2>How dose it work?</h2>
-            <h3>How it work</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error voluptatem accusantium doloremque rem aperiam.</p>
-
+            <header>
+                <h2>How dose it work?</h2>
+                <h3>How it <b>work</b></h3>
+                <p>Sed ut perspiciatis unde omnis iste natus error voluptatem accusantium doloremque rem aperiam.</p>
+            </header>
             <ol>
-                <li>
-                    <h4>Intuitive visual editor</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </li>
-                <li>
-                    <h4>Huge design collection</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </li>
-                <li>
-                    <h4>One click installation</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </li>
+                    <li class="list">
+                        <h4>1. Intuitive visual editor</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="svg-1" viewBox="0 0 24 24">
+                            <title>format-list-bulleted</title>
+                            <path
+                                d="M7,5H21V7H7V5M7,13V11H21V13H7M4,4.5A1.5,1.5 0 0,1 5.5,6A1.5,1.5 0 0,1 4,7.5A1.5,1.5 0 0,1 2.5,6A1.5,1.5 0 0,1 4,4.5M4,10.5A1.5,1.5 0 0,1 5.5,12A1.5,1.5 0 0,1 4,13.5A1.5,1.5 0 0,1 2.5,12A1.5,1.5 0 0,1 4,10.5M7,19V17H21V19H7M4,16.5A1.5,1.5 0 0,1 5.5,18A1.5,1.5 0 0,1 4,19.5A1.5,1.5 0 0,1 2.5,18A1.5,1.5 0 0,1 4,16.5Z" />
+                        </svg>
+                    </li>
+                    <li class="list">
+                        <h4>2. Huge design collection</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="svg-2"viewBox="0 0 24 24">
+                            <title>palette-outline</title>
+                            <path
+                                d="M12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2C17.5,2 22,6 22,11A6,6 0 0,1 16,17H14.2C13.9,17 13.7,17.2 13.7,17.5C13.7,17.6 13.8,17.7 13.8,17.8C14.2,18.3 14.4,18.9 14.4,19.5C14.5,20.9 13.4,22 12,22M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C12.3,20 12.5,19.8 12.5,19.5C12.5,19.3 12.4,19.2 12.4,19.1C12,18.6 11.8,18.1 11.8,17.5C11.8,16.1 12.9,15 14.3,15H16A4,4 0 0,0 20,11C20,7.1 16.4,4 12,4M6.5,10C7.3,10 8,10.7 8,11.5C8,12.3 7.3,13 6.5,13C5.7,13 5,12.3 5,11.5C5,10.7 5.7,10 6.5,10M9.5,6C10.3,6 11,6.7 11,7.5C11,8.3 10.3,9 9.5,9C8.7,9 8,8.3 8,7.5C8,6.7 8.7,6 9.5,6M14.5,6C15.3,6 16,6.7 16,7.5C16,8.3 15.3,9 14.5,9C13.7,9 13,8.3 13,7.5C13,6.7 13.7,6 14.5,6M17.5,10C18.3,10 19,10.7 19,11.5C19,12.3 18.3,13 17.5,13C16.7,13 16,12.3 16,11.5C16,10.7 16.7,10 17.5,10Z" />
+                        </svg>
+                    </li>
+                    <li class="list">
+                        <h4>3. One click installation</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="svg-3" viewBox="0 0 24 24">
+                            <title>layers-triple</title>
+                            <path
+                                d="M12 0L3 7L4.63 8.27L12 14L19.36 8.27L21 7L12 0M19.37 10.73L12 16.47L4.62 10.74L3 12L12 19L21 12L19.37 10.73M19.37 15.73L12 21.47L4.62 15.74L3 17L12 24L21 17L19.37 15.73Z" />
+                        </svg>
+                    </li>
             </ol>
 
-        </header>
+        
 
     </section>
     
