--- a/Lesson 34/Navbar-CSS-Grid/index.html
+++ b/Lesson 34/Navbar-CSS-Grid/index.html
@@ -21,13 +21,26 @@
             <a href="#">Aspernatur?</a>
             <a href="#">Nam.</a>
             <a href="#">Velit?</a>
-            <a href="#">Adipisci.</a>
+            <a href="#adipisci">Adipisci.</a>
         </nav>
 
         <div class="top">
-            <a href=""  class="map">map</a>
+            <a href="#map"  class="map">map</a>
             <span class="hours"><span>schedule: 10:00-18:00</br>Mo-Fr</span></span>
             <a href="" class="lang">EN</a>
+        </div>
+
+        <div class="dropdown" id="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d21754.323576063663!2d28.783206899999996!3d47.034531199999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sro!2s!4v1740055366029!5m2!1sro!2s"
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <div class="options" id="adipisci">
+            <a href="">Lorem.</a>
+            <a href="">Perferendis.</a>
+            <a href="">Eveniet.</a>
         </div>
 
 
