--- a/JS/38/index.html
+++ b/JS/38/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: #333;">
+<body style="background-color: #333;"onkeydown="key ()">
     
     <div  id="box" style="
         width: 100px;
@@ -17,6 +17,14 @@
     </div>
 
     <script>
+        function key () {
+            if(event.code == 'ArrowUp') {
+                moveUp()
+            }
+            if (event.code == 'ArrowDown') {
+                down()
+            }
+        }
        function moveUp () {
             let mt = parseInt(box.style.marginTop)
                 if (mt > 0) {  // Check if the margin is greater than 0
@@ -35,9 +43,9 @@
             }
     </script>
 
-    <button
-    onclick="moveUp ()">up</button>
-    <button onclick="down()">down</button>
+    <!--<button onclick="moveUp ()">up</button>
+   
+    <button onclick="down()">down</button>-->
 
 
 
